feat: complete Phase 1 and apply Optimization 1.0 (atomic saves, visual states, bundle splitting)

--- a/nodes-frontend/components.json
+++ b/nodes-frontend/components.json
@@ -19,5 +19,7 @@
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
-  "registries": {}
+  "registries": {
+    "@scrollxui": "https://www.scrollxui.dev/registry/{name}.json"
+  }
 }
